# caos-seminars

./: README.md
bonus1-android/: README.md
db-internals/: README.md  sample.py
lec1-asm/: main.md  notes.md
sem01-intro/: Makefile  README.md  aplusb.c  aplusb_asm.S  aplusb_preprocessed.c  bad.c  bad_nosan.out  sum_lib.c
sem02-encoding/: README.md  print_int.c
sem02-shell-regex/: README.md  greet_friends.sh  greet_function.sh  greet_many.sh  greet_me.sh  greet_one.sh  logic.sh  regexp.ipynb
sem03-encoding/: Makefile  README.md  print_float.c  print_int.c  print_union.c
sem03-files/: Makefile  README.md  list_dir.c  lseek_demo.c  pread_demo.c  time.c  writev_demo.c
sem03-files/fuse/: CMakeLists.txt  kek.txt  main.c
sem04-arm-asm-basics/: Makefile  README.md  arr_get.S  sum.out  sum_main.c
sem04-asm/: Makefile  README.md  add.S  add.c  add_int.c  arr_get.S  arr_get.c  exp.S  exp.c  int_echo.S  sum.c
sem05-arm/: Makefile  README.md  int_echo.S
sem05-arm-asm-functions/: Makefile  README.md  globals_echo.S  globals_echo.c  int_echo.S  sections.c  structs.c
sem06-memory/: Makefile  README.md  gen_big_file.py  mmap_demo.c  proc_mem_demo.c
sem06-x86-asm/: Makefile  README.md  arr_get.S  echo.S  int_echo.S  sum_n.S
sem07-processes/: Makefile  README.md  parallel_sum.c  simple_shell.c
sem07-x86-sse/: Makefile  README.md  add.S  add_int.c
sem08-syscalls/: Makefile  README.md  brk_demo.c  hello_nostdlib.S  hello_stdlib.c  hello_syscall.c
sem08-thread-sync/: Makefile  README.md  atomic.c  atomic.out  mutex.c  no_sync.c  no_sync.out
(+122 files in other folders)
